<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_selflearn">

    <fragment
        android:id="@+id/navigation_pet"
        android:name="com.example.groupassignment.ui.pet.PetFragment"
        android:label="@string/title_pet"
        tools:layout="@layout/fragment_pet" />

    <fragment
        android:id="@+id/navigation_learn"
        android:name="com.example.groupassignment.ui.learn.LearnFragment"
        android:label="@string/title_learn"
        tools:layout="@layout/fragment_learn" />

    <fragment
        android:id="@+id/navigation_selflearn"
        android:name="com.example.groupassignment.ui.selflearn.SelfLearnFragment"
        android:label="@string/title_selflearn"
        tools:layout="@layout/fragment_selflearn" />


    <fragment
        android:id="@+id/navigation_shop"
        android:name="com.example.groupassignment.ui.shop.ShopFragment"
        android:label="@string/title_shop"
        tools:layout="@layout/fragment_shop" />
</navigation>